fixed bug that did not recognize the new random number generated. Also guessed list now wraps on small screens

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ h1 span {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 1em;
   list-style: none;
   font-size: 1.5em;
